--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -6,6 +6,9 @@ edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "mainnet-v1.38.3" }
+GasService = { git = "https://github.com/axelarnetwork/axelar-cgp-sui.git", subdir = "move/gas_service", rev = "v1.1.3" }
+AxelarGateway = { git = "https://github.com/axelarnetwork/axelar-cgp-sui.git", subdir = "move/axelar_gateway", rev = "v1.1.3" }
+InterchainTokenService  = { git = "https://github.com/axelarnetwork/axelar-cgp-sui.git", subdir = "move/interchain_token_service", rev = "v1.1.3" }
 
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
