--- a/microservice/.env.example
+++ b/microservice/.env.example
@@ -1,3 +1,10 @@
 NODE_ENV=development
 
 DATABASE_URL=postgresql://root:password@localhost:5432/microservice
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+TWITTER_CALLBACK_URL=http://localhost:5173/socialfi/verify-x
+
+JWT_PUBLIC_KEY=
+JWT_PRIVATE_KEY=
