Fix small todos.

--- a/microservice/.env.example
+++ b/microservice/.env.example
@@ -2,6 +2,8 @@ NODE_ENV=development
 
 DATABASE_URL=postgresql://root:password@localhost:5432/microservice
 
+CORS_ORIGIN=https://develop.donations.fun,http://localhost:5173
+
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
 TWITTER_CALLBACK_URL=http://localhost:5173/socialfi/verify-x
