--- a/microservice/package.json
+++ b/microservice/package.json
@@ -26,6 +26,7 @@
     "test:migrate": "dotenv -e .env.test -- prisma migrate deploy"
   },
   "dependencies": {
+    "@7kprotocol/sdk-ts": "^2.3.7",
     "@mysten/sui": "^1.17.0",
     "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
@@ -39,7 +40,7 @@
     "@prisma/client": "^5.22.0",
     "agentkeepalive": "^4.5.0",
     "axios": "^1.8.2",
-    "bignumber.js": "9.0.1",
+    "bignumber.js": "9.2.1",
     "cache-manager": "^5.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
