--- a/microservice/package.json
+++ b/microservice/package.json
@@ -10,7 +10,7 @@
     "build": "nest build common && nest build",
     "build:all": "nest build common && nest build donate-processor",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest build common && nest build donate-processor & nest start",
+    "start": "nest start",
     "watch": "nest build common && nest build donate-processor & nest start --watch",
     "start:debug": "nest build common && nest build donate-processor & nest start --watch --debug",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
