--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,8 @@
     "globals": "^15.15.0",
     "prettier": "3.5.3",
     "typescript": "^5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "engines": {
     "node": "20.x"
